// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkillsAside Section should render correctly 1`] = `
<aside
  className="skills aside section"
>
  <div
    className="section-inner"
  >
    <h2
      className="heading"
    >
      Skills
    </h2>
    <div
      className="content"
    >
      <p
        className="intro"
      />
      <div
        className="skillset"
      >
        <Skills
          key="1"
          skill={
            Object {
              "Bar": 80,
              "id": 1,
              "level": "Expert",
              "title": "CSS",
            }
          }
        />
        <Skills
          key="2"
          skill={
            Object {
              "Bar": 81,
              "id": 2,
              "level": "Expert",
              "title": "Javascript",
            }
          }
        />
      </div>
    </div>
  </div>
</aside>
`;

exports[`SkillsAside Section should render no skills found if none passed in 1`] = `
<aside
  className="skills aside section"
>
  <div
    className="section-inner"
  >
    <h2
      className="heading"
    >
      Skills
    </h2>
    <div
      className="content"
    >
      <p
        className="intro"
      />
      <div
        className="skillset"
      >
        <h4>
          No skillsaside found....... 
        </h4>
      </div>
    </div>
  </div>
</aside>
`;
